<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:elevation="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/FragPostImagePost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp">

                <ImageView
                    android:id="@+id/FragPostImageUser"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/img_avatar_layer_f"
                    tools:src="@drawable/img_avatar_layer_f" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/FragPostUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/FragPostChipCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_bgTwitter"
                android:text="@string/category"
                android:textAlignment="center"
                android:textSize="15dp"
                tools:ignore="TextSizeCheck" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/FragPostChipState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_bgTwitter"
                android:text="@string/state"
                android:textAlignment="center"
                android:textSize="15dp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/FragPostImagePost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/FragDetailTextViewEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/edit_text_post"
                android:textSize="20dp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/FragDetailBtnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/click_para_editar"
                android:src="@drawable/ico_edit"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/FragPostImagePost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/FragDetailTextViewNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/notify_text_post"
                android:textSize="20dp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/FragDetailBtnNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reaction"
                android:src="@drawable/baseline_message_24"
                android:visibility="gone" />
        </LinearLayout>
        <TextView
            android:id="@+id/FragPostTextDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/description"
            android:layout_margin="15dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/FragPostImagePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:srcCompat="@drawable/baseline_photo_camera_24"
                    tools:src="@drawable/baseline_photo_camera_24" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textSize="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/fragPostRecyclerViewComments"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.gms.maps.MapView
                android:id="@+id/FragPostMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                app:cameraZoom="10"
                app:uiRotateGestures="true"
                app:uiZoomControls="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
