<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.fragments.SearchFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/FragSearchSearchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/FragSearchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPassword" />
            </SearchView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Filtros"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="?android:attr/listChoiceIndicatorMultiple" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/FragSearchChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/couple" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lost" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adoption" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/found" />

                </com.google.android.material.chip.ChipGroup>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/FragSearchSwitchState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Switch" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/FragSearchSeekBarRange"
                android:layout_width="255dp"
                android:layout_height="27dp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/FragSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</FrameLayout>