<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:textAlignment="inherit">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:gravity="bottom|center_horizontal|top"
        android:orientation="vertical"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Categoria"
            android:textSize="24sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cat_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:singleSelection="true"
            app:selectionRequired="true"
             >

            <com.google.android.material.chip.Chip
                android:id="@+id/cat_adoption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adoption"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cat_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cat_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cat_couple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/couple"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="235dp"
            android:layout_height="243dp"
            android:minWidth="250dp"
            android:minHeight="250dp"
            tools:src="@tools:sample/avatars"
            android:src="@drawable/ic_add_photo_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/actPostBtnShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tomar foto" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/actPostBtnChoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Elegir una foto" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:counterMaxLength="140">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actPostTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripcion" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button
            android:id="@+id/actPostBtnPost"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
